[package]
name = "rosu-storyboard"
version = "0.1.0"
edition = "2021"

[dependencies]
rosu-map = { path = "../rosu-map" }
thiserror = { version = "1.0.50" }

[dev-dependencies]
rosu-map = { path = "../rosu-map", features = ["tracing"] }
test-log = { version = "0.2.14", default-features = false, features = ["trace"] }